--- a/AngularApp/src/app/app.component.html
+++ b/AngularApp/src/app/app.component.html
@@ -42,9 +42,24 @@
     <p class="text-success fw-bold">Add New Clinic Service</p>
     <app-employee-create></app-employee-create>  
 </div> -->
-<div>
+<!-- //main code -->
+ <!-- <div>
     <app-home></app-home>
-</div>
-<!-- <div class="fw-bold m-2">
+</div>  -->
+<div class="fw-bold m-2">
     <router-outlet></router-outlet>
-</div> -->
+</div> 
+
+<!-- 
+Mycode -->
+<!-- <h1>Patient</h1>
+<app-patient-create></app-patient-create>
+<app-patient-read></app-patient-read>  -->
+
+<!-- <h1>Doctor</h1>
+<app-doctor-create></app-doctor-create>
+<app-doctor-read></app-doctor-read> -->
+
+<!-- <h1>Employee</h1>
+<app-employee-create></app-employee-create>
+<app-employee-read></app-employee-read> -->
