--- a/AngularApp/src/app/Employee/employee-read/employee-read.component.html
+++ b/AngularApp/src/app/Employee/employee-read/employee-read.component.html
@@ -27,6 +27,11 @@
             <i appSortParams  class="fa fa-arrow-down sorting" (click)="sortPhoneDesc()"></i>
         </th>
         <th>
+            <label>Image URL</label>
+            <!-- <i appSortParams  class="fa fa-arrow-up" (click)="sortPhoneAsc()"></i>
+            <i appSortParams  class="fa fa-arrow-down sorting" (click)="sortPhoneDesc()"></i> -->
+        </th>
+        <th>
             <input type="text" class="w w-75 h-25" [(ngModel)]="searchValue" placeholder="Filter by First Name">
         </th>
         <th>
@@ -39,6 +44,7 @@
         <td>{{employee.lastName}}</td>
         <td>{{employee.email}}</td>
         <td>{{employee.phone}}</td>
+        <td><img src="{{employee.imageURL}}" style="width: 100px; height: 100px;"></td>
         <!-- <td><app-employee-update [employee]="employee"></app-employee-update></td> -->
         <a [routerLink]="['edit',employee._id]" ><i class="fa fa-edit" aria-hidden="true" style="font-weight: bold; font-size: larger;"></i></a>
         <td><app-employee-delete [employee]="employee"></app-employee-delete></td>
