--- a/AngularApp/src/app/Patient/patient-read/patient-read.component.html
+++ b/AngularApp/src/app/Patient/patient-read/patient-read.component.html
@@ -31,6 +31,11 @@
             <i appSortParams class="fa fa-arrow-down sorting" (click)="sortGenderDesc()"></i>
         </th>
         <th>
+            <label>Image URL</label>
+            <!-- <i appSortParams class="fa fa-arrow-up" (click)="sortGenderAsc()"></i>
+            <i appSortParams class="fa fa-arrow-down sorting" (click)="sortGenderDesc()"></i> -->
+        </th>
+        <th>
             <label>Ins Id</label>
             <i appSortParams class="fa fa-arrow-up" (click)="sortInsuranceIdAsc()"></i>
             <i appSortParams class="fa fa-arrow-down sorting" (click)="sortInsuranceIdDesc()"></i>
@@ -49,10 +54,14 @@
         <td>{{pat.phone}}</td>
         <td>{{pat.address}}</td>
         <td>{{pat.gender}}</td>
+        <td><img src="{{pat.imageURL}}"  style="width: 100px; height: 100px;"></td>
         <td>{{pat.insuranceId}}</td>
-
+        
         <td> <a [routerLink]="['edit',pat._id]"><i class="fa fa-edit" aria-hidden="true"
                     style="font-weight: bold; font-size: larger;"></i></a>
+        </td>
+        <td> <a [routerLink]="['patientProfile',pat._id]"><i class="fa fa-user-circle" aria-hidden="true"
+            style="font-weight: bold; font-size: larger;"></i></a>
         </td>
         <td>
             <app-patient-delete [patient]="pat"></app-patient-delete>
